bootstrap in base layout

--- a/templates/paper.html
+++ b/templates/paper.html
@@ -10,300 +10,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.9/paper.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script type="text/paperscript" canvas="myCanvas">
-    var EDGE_JSON = {
-  "total_edges": 1,
-  "edges": [
-    {
-      "contours": [
-        [
-          {
-            "y": "352.00063",
-            "x": "440.20761",
-            "controls": [
-              {
-                "y": "351.98692",
-                "x": "440.20761"
-              },
-              {
-                "y": "352.00063",
-                "x": "393.0693"
-              }
-            ]
-          },
-          {
-            "y": "352.00063",
-            "x": "298.79271",
-            "controls": [
-              {
-                "y": "352.00063",
-                "x": "345.93102"
-              },
-              {
-                "y": "351.98401",
-                "x": "298.79271"
-              }
-            ]
-          },
-          {
-            "y": "147.98015",
-            "x": "298.79271",
-            "controls": [
-              {
-                "y": "147.99675",
-                "x": "298.79271"
-              },
-              {
-                "y": "112.58653",
-                "x": "298.79268"
-              }
-            ]
-          },
-          {
-            "y": "99.56268",
-            "x": "251.00726",
-            "controls": [
-              {
-                "y": "99.84602",
-                "x": "286.33878"
-              },
-              {
-                "y": "99.2715",
-                "x": "214.69847"
-              }
-            ]
-          },
-          {
-            "y": "148.84912",
-            "x": "201.70805",
-            "controls": [
-              {
-                "y": "112.44139",
-                "x": "201.70805"
-              },
-              {
-                "y": "148.8861",
-                "x": "201.70805"
-              }
-            ]
-          },
-          {
-            "y": "603.1652",
-            "x": "201.70805",
-            "controls": [
-              {
-                "y": "603.12823",
-                "x": "201.70805"
-              },
-              {
-                "y": "637.3652",
-                "x": "201.70805"
-              }
-            ]
-          },
-          {
-            "y": "650.45207",
-            "x": "248.00427",
-            "controls": [
-              {
-                "y": "649.42825",
-                "x": "213.72311"
-              },
-              {
-                "y": "651.54616",
-                "x": "284.6379"
-              }
-            ]
-          },
-          {
-            "y": "601.94727",
-            "x": "298.293",
-            "controls": [
-              {
-                "y": "638.51492",
-                "x": "298.293"
-              },
-              {
-                "y": "601.93842",
-                "x": "298.293"
-              }
-            ]
-          },
-          {
-            "y": "493.22617",
-            "x": "298.293",
-            "controls": [
-              {
-                "y": "493.23502",
-                "x": "298.293"
-              },
-              {
-                "y": "493.22617",
-                "x": "345.43129"
-              }
-            ]
-          },
-          {
-            "y": "493.22617",
-            "x": "439.70789",
-            "controls": [
-              {
-                "y": "493.22617",
-                "x": "392.5696"
-              },
-              {
-                "y": "493.23254",
-                "x": "439.70789"
-              }
-            ]
-          },
-          {
-            "y": "571.5047",
-            "x": "439.70786",
-            "controls": [
-              {
-                "y": "571.49832",
-                "x": "439.70786"
-              },
-              {
-                "y": "707.9578",
-                "x": "439.70776"
-              }
-            ]
-          },
-          {
-            "y": "755.0007",
-            "x": "249.99554",
-            "controls": [
-              {
-                "y": "754.43709",
-                "x": "388.18741"
-              },
-              {
-                "y": "755.56284",
-                "x": "112.17307"
-              }
-            ]
-          },
-          {
-            "y": "573.28815",
-            "x": "60.29318",
-            "controls": [
-              {
-                "y": "709.27966",
-                "x": "60.29318"
-              },
-              {
-                "y": "573.25629",
-                "x": "60.29318"
-              }
-            ]
-          },
-          {
-            "y": "181.71336",
-            "x": "60.29318",
-            "controls": [
-              {
-                "y": "181.74522",
-                "x": "60.29318"
-              },
-              {
-                "y": "43.34723",
-                "x": "60.29315"
-              }
-            ]
-          },
-          {
-            "y": "-5.00032",
-            "x": "249.99248",
-            "controls": [
-              {
-                "y": "-5.38892",
-                "x": "111.0048"
-              },
-              {
-                "y": "-4.60986",
-                "x": "389.65285"
-              }
-            ]
-          },
-          {
-            "y": "183.58029",
-            "x": "440.20761",
-            "controls": [
-              {
-                "y": "44.46085",
-                "x": "440.20761"
-              },
-              {
-                "y": "183.594",
-                "x": "440.20761"
-              }
-            ]
-          }
-        ],
-        [
-          {
-            "y": "296.23361",
-            "x": "440.20761",
-            "controls": [
-              {
-                "y": "296.23361",
-                "x": "440.1922"
-              },
-              {
-                "y": "333.74477",
-                "x": "440.20761"
-              }
-            ]
-          },
-          {
-            "y": "408.76707",
-            "x": "440.20761",
-            "controls": [
-              {
-                "y": "371.25594",
-                "x": "440.20761"
-              },
-              {
-                "y": "408.76707",
-                "x": "440.1922"
-              }
-            ]
-          },
-          {
-            "y": "408.76707",
-            "x": "250.99957",
-            "controls": [
-              {
-                "y": "408.76707",
-                "x": "251.01498"
-              },
-              {
-                "y": "371.25594",
-                "x": "250.99957"
-              }
-            ]
-          },
-          {
-            "y": "296.23361",
-            "x": "250.99957",
-            "controls": [
-              {
-                "y": "333.74477",
-                "x": "250.99957"
-              },
-              {
-                "y": "296.23361",
-                "x": "251.01498"
-              }
-            ]
-          }
-        ]
-      ],
-      "glyph": "39"
-    }
-  ]
-};
+    var EDGE_JSON = {'total_edges': 1, 'edges': [{'contours': [[{'y': '532.001', 'x': '927.00089', 'controls': [{'y': '276.31506', 'x': '1013.4187'}, {'y': '532.001', 'x': '881.66751'}]}, {'y': '532.001', 'x': '791.00076', 'controls': [{'y': '532.001', 'x': '836.33414'}, {'y': '361.20222', 'x': '868.31212'}]}, {'y': '178.99945', 'x': '550.00029', 'controls': [{'y': '169.19466', 'x': '737.22511'}, {'y': '187.29747', 'x': '391.54794'}]}, {'y': '507.00099', 'x': '280.9999', 'controls': [{'y': '340.04211', 'x': '287.69502'}, {'y': '687.49776', 'x': '273.76192'}]}, {'y': '864.99983', 'x': '550.00029', 'controls': [{'y': '857.35077', 'x': '380.83722'}, {'y': '872.99068', 'x': '726.72194'}]}, {'y': '532.001', 'x': '791.00076', 'controls': [{'y': '697.3733', 'x': '853.82108'}, {'y': '532.001', 'x': '836.33414'}]}, {'y': '532.001', 'x': '927.00089', 'controls': [{'y': '532.001', 'x': '881.66751'}, {'y': '782.62794', 'x': '1002.2784'}]}, {'y': '1028.99983', 'x': '550.00029', 'controls': [{'y': '1033.94402', 'x': '811.64153'}, {'y': '1024.1363', 'x': '292.6291'}]}, {'y': '507.00099', 'x': '122.99963', 'controls': [{'y': '777.92451', 'x': '114.89835'}, {'y': '250.39648', 'x': '130.67274'}]}, {'y': '17.99931', 'x': '550.00029', 'controls': [{'y': '23.10724', 'x': '304.44907'}, {'y': '12.3862', 'x': '819.83696'}]}], [{'y': '-111.00009', 'x': '325.99922', 'controls': [{'y': '-170.25203', 'x': '381.9998'}, {'y': '-159.33339', 'x': '298.33273'}]}, {'y': '-255.99995', 'x': '242.99976', 'controls': [{'y': '-207.66666', 'x': '270.66624'}, {'y': '-330.54799', 'x': '324.5044'}]}, {'y': '-353.99954', 'x': '544.0005', 'controls': [{'y': '-366.272', 'x': '434.2289'}, {'y': '-325.72467', 'x': '796.90617'}]}, {'y': '177.00061', 'x': '964.00046', 'controls': [{'y': '-86.07631', 'x': '964.00046'}, {'y': '177.06955', 'x': '964.00046'}]}, {'y': '1024.00107', 'x': '964.00043', 'controls': [{'y': '1023.93213', 'x': '964.00043'}, {'y': '1024.00107', 'x': '910.00056'}]}, {'y': '1024.00107', 'x': '802.00082', 'controls': [{'y': '1024.00107', 'x': '856.00069'}, {'y': '1023.92899', 'x': '802.00067'}]}, {'y': '138.00052', 'x': '800.00043', 'controls': [{'y': '138.07262', 'x': '800.00058'}, {'y': '-21.03659', 'x': '799.64134'}]}, {'y': '-186.99963', 'x': '544.0005', 'controls': [{'y': '-164.93227', 'x': '697.57813'}, {'y': '-198.59526', 'x': '463.30109'}]}]], 'glyph': '71'}]};
 
 
     var edges = EDGE_JSON.edges;
@@ -319,11 +26,14 @@
                 //                          y: contour.y - contour.controls[0].y},
                 //                         {x: contour.x - contour.controls[1].x,
                 //                          y: contour.y - contour.controls[1].y}]})
-                segment = new Segment(new Point(contour.x -0 , 300 - contour.y -0),
-                                      new Point(contour.x - contour.controls[0].x,
-                                                contour.y - contour.controls[0].y),
-                                      new Point(contour.x - contour.controls[1].x,
-                                                contour.y - contour.controls[1].y));
+                var relX1 = contour.x - contour.controls[0].x;
+                var relY1 = contour.y - contour.controls[0].y;
+
+                var relX2 = contour.x - contour.controls[1].x;
+                var relY2 = contour.y - contour.controls[1].y;
+                segment = new Segment(new Point((contour.x -0) / 3, (300 - contour.y -0) / 3),
+                                      new Point(relX1 / 3, relY1 / 3),
+                                      new Point(relX2 / 3, relY2 / 3));
                 path.add(segment);
             }
             path.selected = true;
