--- a/templates/view.html
+++ b/templates/view.html
@@ -6,7 +6,6 @@ $if cfont.idwork == '1' :
        B: $cfont.fontnb
 Project $cfont.idmaster
 </title>
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 <!-- <link rel="stylesheet" type="text/css" href="/static/mfg.css"/> -->
 
 <div class="row">
@@ -343,7 +342,7 @@ Project $cfont.idmaster
         <p style="color:CCFFFF"> &#9678; control points </p>
     </div>
     <div class="col-md-9">
-        <div class="canvas"><canvas id="myCanvas" resize></canvas></div>
+        <div class="canvas"><canvas id="myCanvas" width="500" height="500"></canvas></div>
     </div>
     
     
