--- a/templates/view.html
+++ b/templates/view.html
@@ -370,9 +370,9 @@ $if json:
                 console.log(contour);
 
                 var point = new Point(Number(contour.x) -0, 500 - Number(contour.y) -0);
-                var handleIn = new Point(Number(contour.x) - Number(contour.controls[0].x),
+                var handleIn = new Point( Number(contour.controls[0].x - Number(contour.x)),
                                          Number(contour.y) - Number(contour.controls[0].y));
-                var handleOut = new Point(Number(contour.x) - Number(contour.controls[1].x),
+                var handleOut = new Point( Number(contour.controls[1].x - Number(contour.x)),
                                           Number(contour.y) - Number(contour.controls[1].y));
                 setText(point, contour.x, contour.y);
                 // setText(handleIn, contour.controls[0].x, contour.controls[0].y);
