paper.js path positioning

--- a/templates/view.html
+++ b/templates/view.html
@@ -374,17 +374,20 @@ $if json:
                                          Number(contour.y) - Number(contour.controls[0].y));
                 var handleOut = new Point( Number(contour.controls[1].x - Number(contour.x)),
                                           Number(contour.y) - Number(contour.controls[1].y));
-                setText(point, contour.x, contour.y);
+         //       setText(point, contour.x, contour.y);
                 // setText(handleIn, contour.controls[0].x, contour.controls[0].y);
                 // setText(handleOut, contour.controls[1].x, contour.controls[1].y);
                 
                 segment = new Segment(point, handleIn, handleOut);
                 path.add(segment);
             }
+            path.closed = true;
             path.selected = true;
             path.fullySelected = true;
             path.strokeColor = 'black';
-
+            path.scale(.5);
+            path.position.y += +500;
+            path.position.x += +100;
             path.fillColor = {
                 hue: 360 * Math.random(),
                 saturation: 1,
