changed urls for font1 to fonts/ and fonts/(.+)

--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@ $if is_loggedin():
 	<p><span class="button"><a href="/view/1">Editor&nbsp;&nbsp;</a></span></p>
 	<!-- <p><span class="button"><a href="/">Editor&nbsp;&nbsp;</a></span></p> -->
 	<p><span class="button"><a href="/viewfont/">Specimen</a></span></p>
-	<p><span class="button"><a href="/font1/0">Settings</a></span></p>
+	<p><span class="button"><a href="/fonts/">Settings</a></span></p>
 	<p><span class="button"><a href="/project/create/">Upload UFO Project</a></span></p>
 	<!-- 
 	<span class="button"><a href="/font2/1">Global</a></span><br><br>
