--- a/templates/cproject.html
+++ b/templates/cproject.html
@@ -23,5 +23,5 @@ the idmaster new will be created as the max idmaster + 1 <br>
 see the list in settings<br>
 
 <a href="/cproject/1001">click here to proceed this procedure </a><br>
-<a href="/font1/0">Settings</a> 
+<a href="/fonts/">Settings</a> 
 </p>
