--- a/templates/metap.html
+++ b/templates/metap.html
@@ -1,7 +1,7 @@
 $def with (posts,master,fontsource,webglyph)
 
 $if webglyph == '' :
-	<meta http-equiv="refresh" content="0;url=/font1/0">
+	<meta http-equiv="refresh" content="0;url=/fonts/">
 $if webglyph != '' :
 	<meta http-equiv="refresh" content="0;url=/view/1">
 
