--- a/templates/base.html
+++ b/templates/base.html
@@ -97,9 +97,9 @@ $if is_loggedin():
 	<p><span class="button"><a href="/fonts/">Settings</a></span></p>
 	<p><span class="button"><a href="/project/create/">Upload UFO Project</a></span></p>
 	<!-- 
-	<span class="button"><a href="/font2/1">Global</a></span><br><br>
-	<span class="button"><a href="/font3/1">Local A</a></span><br><br>
-	<span class="button"><a href="/font4/1">Local B</a></span><br><br>
+	<span class="button"><a href="/settings/globals/1">Global</a></span><br><br>
+	<span class="button"><a href="/settings/locals-a/1">Local A</a></span><br><br>
+	<span class="button"><a href="/settings/locals-b/1">Local B</a></span><br><br>
 	 -->
 </div>
 
