--- a/templates/font2.html
+++ b/templates/font2.html
@@ -72,9 +72,9 @@ table,th,td {
 
 <div class="title">Global Parameters | Project $cfont.idmaster</div>
 
-<p><a href="/font2/$cfont.idglobal">Global Parameters Edit</a>&nbsp;
-<span><a href="/font3/$cfont.idlocalA">A Local Params Edit</a>&nbsp;</span>
-<span><a href="/font4/$cfont.idlocalB">B Local Params Edit</a>&nbsp;</span></p>
+<p><a href="/settings/globals/$cfont.idglobal">Global Parameters Edit</a>&nbsp;
+<span><a href="/settings/locals-a/$cfont.idlocalA">A Local Params Edit</a>&nbsp;</span>
+<span><a href="/settings/locals-b/$cfont.idlocalB">B Local Params Edit</a>&nbsp;</span></p>
 
 <div id="mm">
 <form action="" method="POST" name="form">
@@ -83,4 +83,4 @@ $:form.render()
 </div>
 <p>
 $for gmg in gmlist:
-     <a href="/font2/$gmg.idglobal">Global $gmg.idglobal</a> interp $gmg.metapolation sz $gmg.fontsize mean $gmg.mean cap $gmg.cap asc $gmg.ascl desc $gmg.des box $gmg.box <br>
+     <a href="/settings/globals/$gmg.idglobal">Global $gmg.idglobal</a> interp $gmg.metapolation sz $gmg.fontsize mean $gmg.mean cap $gmg.cap asc $gmg.ascl desc $gmg.des box $gmg.box <br>
