changed SQL for global parameters, create new page with list of them

--- a/templates/font1.html
+++ b/templates/font1.html
@@ -109,7 +109,7 @@ $:form.render()
 
 <div>
 <p>
-<a href="/settings/globals/$cfont.idglobal" style="color:green;text-decoration:underline;">Edit Global and Local Parameters</a>
+<a href="/settings/globals/" style="color:green;text-decoration:underline;">Edit Global and Local Parameters</a>
 </p>
 
 <div>
