--- a/templates/font4.html
+++ b/templates/font4.html
@@ -66,7 +66,7 @@ table,th,td {
 
 <div class="title">B Local Parameters | Project $cfont.idmaster</div>
 
-<p><span><a href="/settings/globals/$cfont.idglobal">Global Parameters Edit</a></span></p>
+<p><span><a href="/settings/globals/">Global Parameters Edit</a></span></p>
 <br>
 
 <div style="vertical-align:top;display:inline-block;">
