--- a/templates/view.html
+++ b/templates/view.html
@@ -5,20 +5,33 @@ Project $master.fontname
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.9/paper.js"></script>
 
-<div class="row">
-  <div class="col-md-4">
-    <canvas id="canvas-a" resize></canvas>
-  </div>
 
-  <div class="col-md-4">
-    <h3>Metapolation</h3>
-  </div>
 
-  $if master.FontNameB:
+$if master.FontNameB:
+  <div class="row">
+    <div class="col-md-4">
+      <canvas id="canvas-a" resize></canvas>
+    </div>
+
+    <div class="col-md-4">
+      <h3>Metapolation</h3>
+    </div>
+
     <div class="col-md-4">
       <canvas id="canvas-b" resize></canvas>
     </div>
-</div>
+  </div>
+$else:
+  <div class="row">
+    <div class="col-md-6">
+      <canvas id="canvas-a" resize></canvas>
+    </div>
+
+    <div class="col-md-6">
+      <h3>Metapolation</h3>
+    </div>
+  </div>
+
 
 <script type="text/paperscript" canvas="canvas-a">
   function setText(point) {
