--- a/templates/view.html
+++ b/templates/view.html
@@ -1,11 +1,9 @@
 $def with (master, A_glyphjson, B_glyphjson)
 <title>
-Project $master.fontname
+Project $master.FontName
 </title>
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.9/paper.js"></script>
-
-
 
 $if master.FontNameB:
   <div class="row">
