--- a/templates/view.html
+++ b/templates/view.html
@@ -8,6 +8,7 @@ Project $master.FontName
 $if master.FontNameB:
   <div class="row">
     <div class="col-md-4">
+      <h4>Font A</h4>
       <canvas id="canvas-a" width="600" height="600"></canvas>
     </div>
 
@@ -16,12 +17,14 @@ $if master.FontNameB:
     </div>
 
     <div class="col-md-4">
+      <h4>Font B</h4>
       <canvas id="canvas-b" width="600" height="600"></canvas>
     </div>
   </div>
 $else:
   <div class="row">
     <div class="col-md-6">
+      <h4>Font A</h4>
       <canvas id="canvas-a" width="600" height="600"></canvas>
     </div>
 
