--- a/templates/base.html
+++ b/templates/base.html
@@ -85,25 +85,43 @@ right {
 </head>
 <body>
 
-<div class="menu">
 
-$if is_loggedin():
-	<p><span class="button"><a href="$working_url('static/font.otf')">Download OTF</a></span></p>
+    <div class="navbar navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Metapolator</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/fonts/">Settings</a></li>
+            $if is_loggedin():
+              <li><a href="$working_url('static/font.otf')">Download OTF</a></li>
+            <li><a href="/settings/globals/">Parameters</a></li>
+            <li><a href="/viewfont/">Specimen</a></li>
+            <li><a href="/project/create/">Upload UFO Project</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+
+      $:page
+
+    </div><!-- /.container -->
 
 
-	<p><span class="button"><a href="/view/1">Editor&nbsp;&nbsp;</a></span></p>
-	<!-- <p><span class="button"><a href="/">Editor&nbsp;&nbsp;</a></span></p> -->
-	<p><span class="button"><a href="/viewfont/">Specimen</a></span></p>
-	<p><span class="button"><a href="/fonts/">Settings</a></span></p>
-	<p><span class="button"><a href="/project/create/">Upload UFO Project</a></span></p>
-	<!-- 
-	<span class="button"><a href="/settings/globals/1">Global</a></span><br><br>
-	<span class="button"><a href="/settings/locals-a/1">Local A</a></span><br><br>
-	<span class="button"><a href="/settings/locals-b/1">Local B</a></span><br><br>
-	 -->
-</div>
-
-$:page
+  <!-- 
+	<p><span class="button"><a href="/">Editor&nbsp;&nbsp;</a></span></p>
+  <span class="button"><a href="/settings/globals/1">Global</a></span><br><br>
+  <span class="button"><a href="/settings/locals-a/1">Local A</a></span><br><br>
+  <span class="button"><a href="/settings/locals-b/1">Local B</a></span><br><br>
+   -->
 
 </body>
 </html>
