show for demo A and B font identical

--- a/templates/view.html
+++ b/templates/view.html
@@ -5,34 +5,22 @@ Project $master.FontName
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.9/paper.js"></script>
 
-$if master.FontNameB:
-  <div class="row">
-    <div class="col-md-4">
-      <h4>Font A</h4>
-      <canvas id="canvas-a" width="600" height="600"></canvas>
-    </div>
-
-    <div class="col-md-4">
-      <h4>Metapolation</h4>
-    </div>
-
-    <div class="col-md-4">
-      <h4>Font B</h4>
-      <canvas id="canvas-b" height="600"></canvas>
-    </div>
-  </div>
-$else:
-  <div class="row">
-    <div class="col-md-6">
-      <h4>Font A</h4>
-      <canvas id="canvas-a" height="600" width="600"></canvas>
-    </div>
-
-    <div class="col-md-6">
-      <h4>Metapolation</h4>
-    </div>
+<div class="row">
+  <div class="col-md-4">
+    <h4>Font A</h4>
+    <canvas id="canvas-a" width="400" height="400"></canvas>
   </div>
 
+  <div class="col-md-4" style="border: solid 2px black;">
+    <h4>Metapolation</h4>
+    <canvas width="400" height="400"></canvas>
+  </div>
+
+  <div class="col-md-4">
+    <h4>Font B</h4>
+    <canvas id="canvas-b" height="400" width="400"></canvas>
+  </div>
+</div>
 
 <script type="text/paperscript" canvas="canvas-a">
   function setText(point) {
@@ -48,10 +36,13 @@ $else:
     height = EDGE_JSON.height;
 
     ratio = width / height;
-    h = scope.view.size.height - 200;
-
-    w = h * ratio;
-
+    if (width > height) {
+      w = scope.view.size.width - 100;
+      h = w / ratio;
+    } else {
+      h = scope.view.size.height - 100;
+      w = h * ratio;
+    }
     nx = w * x / width;
     ny = h * y / height;
 
@@ -81,7 +72,7 @@ $else:
           path.selected = true;
           path.fullySelected = true;
           path.strokeColor = 'black';
-          path.position.y += +300;
+          path.position.y += +200;
           path.fillColor = {
               hue: 360 * Math.random(),
               saturation: 1,
@@ -90,23 +81,37 @@ $else:
           };
       }
   }
-  width = EDGE_JSON.width;
-  height = EDGE_JSON.height;
-
-  ratio = width / height;
-  w = scope.view.size.height * ratio;
-  scope.view.size.width = w;
-  console.log(scope.view.size);
 </script>
 
-$if master.FontNameB:
-  <script type="text/paperscript" canvas="canvas-b">
-  function setText(point) {
+
+<script type="text/paperscript" canvas="canvas-b">
+function setText(point) {
       var text = new PointText(point);
       text.fillColor = 'black';
       text.content = point.x.toFixed(2) + ',' + point.y.toFixed(2);
   }
-  var EDGE_JSON = $:B_glyphjson;
+
+  var EDGE_JSON = $:A_glyphjson;
+
+  function getPoint(x, y) {
+    width = EDGE_JSON.width;
+    height = EDGE_JSON.height;
+
+    ratio = width / height;
+    if (width > height) {
+      w = scope.view.size.width - 100;
+      h = w / ratio;
+    } else {
+      h = scope.view.size.height - 100;
+      w = h * ratio;
+    }
+    nx = w * x / width;
+    ny = h * y / height;
+
+    console.log({'nx': nx, 'ny': ny})
+    return new Point(nx, ny);
+  }
+
   var edges = EDGE_JSON.edges;
   for (var i = 0; i < edges.length; i++) {
       for (var j = 0; j < edges[i].contours.length; j++) {
@@ -116,10 +121,10 @@ $if master.FontNameB:
               contour = contours[k];
               console.log(contour);
 
-              var point = new Point(Number(contour.x), 500 - Number(contour.y));
-              var handleIn = new Point(Number(contour.controls[0].x) - Number(contour.x),
+              var point = getPoint(Number(contour.x), 500 - Number(contour.y));
+              var handleIn = getPoint(Number(contour.controls[0].x) - Number(contour.x),
                                        Number(contour.y) - Number(contour.controls[0].y));
-              var handleOut = new Point(Number(contour.controls[1].x) - Number(contour.x),
+              var handleOut = getPoint(Number(contour.controls[1].x) - Number(contour.x),
                                         Number(contour.y) - Number(contour.controls[1].y));
               segment = new Segment(point, handleIn, handleOut);
               // setText(point);
@@ -129,8 +134,7 @@ $if master.FontNameB:
           path.selected = true;
           path.fullySelected = true;
           path.strokeColor = 'black';
-          path.position.y += +500;
-          path.position.x += +100;
+          path.position.y += +200;
           path.fillColor = {
               hue: 360 * Math.random(),
               saturation: 1,
